...
            android:id="@+id/img_album"
            android:layout_width="@dimen/album_image_width"
            android:layout_height="@dimen/album_image_height"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/txt_album_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/margin5"
            android:layout_toEndOf="@+id/img_album" />

        <TextView
            android:id="@+id/txt_album_name"
            style="@style/ALbumTitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_album_artist"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/margin5"
...
